edited quick-search logic

--- a/appsettings.json
+++ b/appsettings.json
@@ -22,7 +22,7 @@
     "SiteExternalUrl": null
   },
   "SmtpSettings": {
-    "Host": null,
+    "Host": "iscoadms2@gmail.com",
     "Port": 25,
     "UseSsl": false,
     "From": null,
